--- a/notes/literature/references.bib
+++ b/notes/literature/references.bib
@@ -78,3 +78,14 @@ booktitle={International Conference on Learning Representations},
 year={2019},
 url={https://openreview.net/forum?id=rJl-b3RcF7},
 }
+
+@inproceedings{houlsby2019parameter,
+  title={Parameter-efficient transfer learning for NLP},
+  author={Houlsby, Neil and Giurgiu, Andrei and Jastrzebski, Stanislaw and Morrone, Bruna and De Laroussilhe, Quentin and Gesmundo, Andrea and Attariyan, Mona and Gelly, Sylvain},
+  booktitle={International conference on machine learning},
+  pages={2790--2799},
+  year={2019},
+  organization={PMLR}
+}
+
+
