Literature: add paragraph headers and introduction

--- a/notes/literature/subnetwork_discovery.tex
+++ b/notes/literature/subnetwork_discovery.tex
@@ -36,17 +36,23 @@ hypertexnames=true]
 
 \begin{abstract}
 \noindent
-Studies that dissect the hidden representations of deep neural networks are commonplace in machine learning research. A long-standing problem within the field has been to determine to what extent models learn representations that are modular and specialized. For example, if a model is trained on an arithmetic dataset, is there a part of the model that computes addition, and is this part  distinguishable from the part that computes subtraction? Recently, the field of mechanistic interpretability has become a popular approach for answering such questions. This is typically done by identifying so-called circuits, which are subnetworks that correspond to the individual operations involved in solving a task. This functional definition of modularity, however, is also found under other names and by other methods than those typically used in mechanistic interpretability. This document tries to synthesize existing methods for identifying such subnetworks under a shared vocabulary, with an emphasis on applications within NLP.
+Studies that dissect the hidden representations of deep neural networks are commonplace in machine learning research. A long-standing problem within the field has been to determine to what extent these representations are modular and specialized. For example, if a model is trained on an arithmetic dataset, is there a part of the model that computes addition, and is this part  distinguishable from the part that computes subtraction? Recently, the field of mechanistic interpretability has become a popular approach for answering such questions. This is typically done by identifying so-called circuits, which are subnetworks that correspond to the individual operations involved in solving a task. This functional definition of modularity, however, is also found under other names and by other methods than those typically used in mechanistic interpretability. This document tries to synthesize existing methods for identifying such subnetworks under a shared vocabulary, with an emphasis on applications within NLP.
 \end{abstract}
 
-\section{What is a subnetwork?}
-The work surveyed in this article are all, in some way or another, concerned with the following question: Given a parameterized model $M_\theta$ and a target task $T$ that is composed of a set of $i$ distinguishable subtasks $ST_i$, is there a subnetwork in $M_\theta$, $\subnetwork \subset \theta$, that can solve $ST_i$ with a comparable performance to the overall model, so that $P(x | M_\theta) \approx P(x | M_{\subnetwork})$ for $x \sim ST_i$? In the literature there exists  multiple terms for describing $\hat{\theta_i}$ and multiple ways of separating it from $\theta$. In this section, we present the most common ways of describing $\subnetwork$.
+\section{Introduction}
 
-\citet{csordas2020neural} uses the terms \textit{module} and \textit{subnetwork} interchangeably to refer to $\subnetwork$, which they describe as a subset of a models' weights that is responsible for performing a specific target functionality. The same functional definition is used in \citet{lepori2023break} but there exclusively under the name \textit{subnetwork}. 
+The work surveyed in this article are all, in some way or another, concerned with the following question: does deep learning models learn solutions to problems that are modular and specialized? And if so, can we find evidence of this if we inspect the latent space? This is especially relevant for tasks where there exists a compositional solution that follows from the application and combination of a set of individual functions or smaller units of computation, such as in different types of reasoning, multi-hop question answering and code verification. This question can also be formulated more formally: Given a parameterized model $M_\theta$ and a target task $T$ that is composed of a set of $i$ distinguishable subtasks $ST_i$, is there a subnetwork in $M_\theta$, $\subnetwork \subset \theta$, that can solve $ST_i$ with a comparable performance to the overall model, so that $P(x | M_\theta) \approx P(x | M_{\subnetwork})$ for $x \sim ST_i$? 
 
+In the literature there exists  multiple terms for describing $\hat{\theta_i}$ and multiple ways of separating it from $\theta$. In the following sections we will try to synthesize these terms and methodologies using a notation that relates back to this question.
+
+\section{We have many names for the things we love}
+This section presents common ways of describing $\subnetwork$.
+\paragraph{Subnetwork}
+\citet{csordas2020neural} uses the terms \textit{module} and \textit{subnetwork} interchangeably to refer to $\subnetwork$. A subnetwork is defined as a subset of $\theta$ that is responsible for performing a specific target functionality, $ST_i$. The same functional definition is used in \citet{lepori2023break} but there exclusively under the name \textit{subnetwork}. 
+\paragraph{Cluster}
 \citet{watanabe2019interpreting} uses the same functional definition of modularity, but uses the term \textit{cluster} to refer to a set of feature vectors that are the most influential on the output of a model for a set of specific inputs. This term is also used by \citet{casper2022graphical}, who defines a cluster to be a subset of the network when viewed as a computational graph (with neurons being the node abstraction). These clusters are analyzed with respect to their \textit{local specialization}, where goal of the analysis is to determine to what extent certain clusters translate to functional abstractions from the target task.
-
-In contrast to the functional definition, \citet{ansell-etal-2022-composable} uses the term \textit{subset} to refer to the parameters of $M$ that are the most influential on a finetuning task. This definition is closely related to works on effecient finetuning, such as adapters \citep{houlsby2019parameter}, where additional parameters are inserted into $M$. As these parameters are not part of the original model, these methods fall out of scope for this survey.
+\paragraph{Subset}
+In contrast to the functional definition, \citet{ansell-etal-2022-composable} uses the term \textit{subset} to refer to the parameters of $M$ that are the most influential on a finetuning task. This definition is closely related to works on efficient finetuning, such as adapters \citep{houlsby2019parameter}, where additional parameters are inserted into $M$. As these parameters are not part of the original model, these methods fall out of scope for this survey.
 
 \section{Identification methods}
 In this section we discuss existing methods for identifying $\subnetwork$ from $\theta$.
@@ -81,7 +87,7 @@ where $L$ is the cross entropy, $x \sim ST_i$, and $\lambda$ and $\beta$ are hyp
 which gives us the final subnetwork responsible for computing $ST_i$: $\subnetwork = M_{\theta_i \odot H(m_i)}$
 
 \subsubsection{Lottery Ticket Sparse Fine-Tuning}
-Another way of identifying masks is the Lottery Ticket Sparse Fine-Tuning approach proposed by \citet{ansell-etal-2022-composable}. After finetuning a pretrained network on a target task, they identify the subset of parameters that changed the most during this training phase. Given a pretrained model $M$ parameterized by $\theta^0$, finetuning $M$ on a target task yields the parameters $\theta^1$. Parameters are then ranked according to their greatest absolute difference: $|\theta^1_i - \theta^0_i|$. A binary mask is then constructed by selecting the top $K$ parameters and setting all weights in $M$ that correspond to these to 1 and the rest to 0, resulting in $\subnetwork$. A similar approach is also used in \citet{frankle2018the}.
+Another way of identifying masks is the Lottery Ticket Sparse Fine-Tuning approach proposed by \citet{ansell-etal-2022-composable}. After finetuning a pretrained network on a target task, they identify the subset of parameters that changed the most during this training phase. Given a pretrained model $M$ parameterized by $\theta^0$, finetuning $M$ on a target task yields the parameters $\theta^1$. Parameters are then ranked according to their greatest absolute difference: $|\theta^1_i - \theta^0_i|$. A binary mask is then constructed by selecting the top $K$ parameters and setting all elements in $\theta_{i \in K}$ to 1 and $\theta_{i \notin K}$ to 0, resulting in $\subnetwork$. A similar approach is also used in \citet{frankle2018the}.
 
 \subsection{Clustering}
 \citet{watanabe2019interpreting, casper2022graphical}
